<resources>
    <string name="app_name">微课圈</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty_hint">数据为空\r\n点击刷新</string>
    <string name="service_error_hint">服务器异常</string>
    <string name="service_error_token">会话过期，请重新登录</string>
    <string name="please_bind_phone">需绑定 手机号才可使用</string>
    <string name="service_json_error_hint">服务器返回数据格式有误</string>
    <string name="service_unconnect_hint">服务器连接不上</string>
    <string name="net_wrok_unconnetion_text">网络连接异常</string>
    <string name="preview">预览</string>
    <string name="button_ok_label">确定</string>
    <string name="file_not_found">没有找到文件</string>
    <string name="loading">正在加载...</string>
    <string name="max_checked">最多可选择</string>
    <string name="photo">张图片</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在刷新……</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal"></string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_loading">正在加载……</string>
    <string name="study_text">学习</string>
    <string name="circle_text">圈子</string>
    <string name="find_text">发现</string>
    <string name="message_text">消息</string>
    <string name="mine_text">我的</string>
    <string name="class_text">动态</string>
    <string name="User_name_cannot_be_empty">用户名不能为空！</string>
    <string name="Password_cannot_be_empty">密码不能为空！</string>
    <string name="welcome_to_vko">欢迎来到微课圈</string>
    <string name="tv_home_number">账    号</string>
    <string name="tv_home_pwd">密    码</string>
    <string name="tv_home_check">验证码</string>
    <string name="test_text">更换教材版本，请</string>
    <string name="course_study">学习</string>
    <string name="last_play">你上次听到</string>
    <string name="tv_unit_name">第一单元</string>
    <string name="tv_section">集合</string>
    <string name="tv_Proportion">比例</string>
    <string name="tv_chapter">小节</string>
    <string name="tv_knowledge_name">运动的描述</string>
    <string name="tv_time_consuming">耗时</string>
    <string name="et_seacher">搜索</string>
    <string name="tv_knowledge_names">同步课程学习</string>
    <string name="tv_special_name">综合课程</string>
    <string name="tv_Arts_exam">综合复习测评</string>
    <string name="tv_question_exam">全国名卷名题</string>
    <string name="tv_knowledge_point">新课学习好帮手，名校名师微课精讲</string>
    <string name="tv_special_content">百万精选习题随手测，同步学习闯关晋级</string>
    <string name="tv_sync_content">综合复习知识点梳理，综合串讲点拨要害</string>
    <string name="tv_Arts_content">汇编全国名题综合检测，全知识点能力值大扫描</string>
    <string name="tv_question_content"> 动态更新全国名卷名题，看看学霸们都在做啥！</string>
    <string name="tv_grade_offered_volumes">七年级数学上册</string>
    <string name="tv_carry_on">继续</string>
    <string name="send_course">(%d节课程)发送到班级</string>
    <string name="text_problem_answer">帮人解答</string>
    <string name="text_problem_ask">我要提问</string>
    <string name="text_problem_submit">提交</string>
    <string name="text_problem_mine">问题记录</string>
    <string name="hint_problem_ask">你可以在这里补充一点文字</string>
    <string name="text_i_answer">我要回答</string>
    <string name="text_same_people"><xliff id="count">%d</xliff>人同问</string>
    <string name="text_answer_people"><xliff id="count">%d</xliff>人回答</string>
    <string name="exists_pic_hint">图片不存在</string>
    <string name="onclick_record_hint">点击录音</string>
    <string name="onclick_stop_hint">点击停止录音</string>
    <string name="onclick_stop_play_hint">点击停止播放</string>
    <string name="onclick_play_hint">点击播放录音</string>
    <string name="empty_submit_hint">提交内容不能为空</string>
    <string name="answer_adop_text">采纳</string>
    <string name="answer_report_text">举报</string>
    <string name="text_pic_preview">图片预览</string>
    <string name="text_landscape_camera">请使用横屏拍题,并保持手机平稳</string>
    <string name="text_search_remake">重拍</string>
    <string name="report_study_text">与学习无关</string>
    <string name="report_sexy_text">色情低俗</string>
    <string name="report_advert_text">广告骚扰</string>
    <string name="report_politics_text">政治敏感</string>
    <string name="report_rumor_text">谣言</string>
    <string name="report_cheat_text">欺诈骗钱</string>
    <string name="report_supply_hint">补充说明</string>
    <string name="report_reason_hint">请选择举报原因</string>
    <string name="report_quote_hint">请举证（选填）</string>
    <string name="report_content_hint">请输入您要举报的内容</string>
    <string name="text_course_topic">专题</string>
    <string name="chapter_text">课程数：  <xliff id="count">%d</xliff>   节 </string>
    <string name="teacher_text">主要讲师：</string>
    <string name="cource_intro_text">课程简介：</string>
    <string name="price_text">￥<xliff id="count">%s</xliff></string>
    <string name="buy_text">购买</string>
    <string name="topic_practice_text">练习</string>
    <string name="topic_download_text">下载</string>
    <string name="topic_problem_text">提问</string>
    <string name="register_text">注册</string>
    <string name="login_text">登录</string>
    <string name="send_text">短信验证码</string>
    <string name="send_phone_text">语音验证码</string>
    <string name="i_message">我的消息</string>
    <string name="i_download_text">我的下载</string>
    <string name="i_study_learn_sub">学段学科</string>
    <string name="i_geade_setting">年级设置</string>
    <string name="i_book_setting">教材设置</string>
    <string name="i_special_text">我的专题</string>
    <string name="i_my_order">我的订单</string>
    <string name="i_task">我的V币</string>
    <string name="i_income">我的钱包</string>
    <string name="i_record">搜题记录</string>
    <string name="i_favorite">我的收藏</string>
    <string name="learningrecord_text">学习轨迹</string>
    <string name="notepad_text">错题本</string>
    <string name="notepad_err_num">共有10到错题</string>
    <string name="notepad_err_name">高中数学选修四(人教版)</string>
    <string name="notepad_subject">学科</string>
    <string name="i_share_text">邀请好友</string>
    <string name="i_order_class">我的课程</string>
    <string name="i_order_text">我的订单</string>
    <string name="i_account_text">我的帐户</string>
    <string name="feedback_text">意见反馈</string>
    <string name="i_system_design">系统设置</string>
    <string name="forget_password">忘记密码</string>
    <string name="add_vko">加入微课圈</string>
    <string name="i_name">李天霸</string>
    <string name="i_city">河北唐山市一中</string>
    <string name="personal_info">个人信息</string>
    <string name="setting">个人信息</string>
    <string name="i_class">高一三班</string>
    <string name="i_jifen">积分</string>
    <string name="i_dengji">等级</string>
    <string name="i_huiyun">会员到期 2015-10-08</string>
    <string name="i_renew">续费</string>
    <string name="i_member_renew">会员续费</string>
    <string name="tv_head">头像</string>
    <string name="tv_name">姓名</string>
    <string name="tv_account">帐号</string>
    <string name="tv_sex">性别</string>
    <string name="hint_class">您的班级必须在0-1000之间哦</string>
    <string name="tv_phone">手机号</string>
    <string name="tv_address">学校地点</string>
    <string name="tv_schoolname">学校名称</string>
    <string name="tv_grade">年级</string>
    <string name="tv_class">班级</string>
    <string name="tv_password">修改密码</string>
    <string name="tv_person_msg">个人信息</string>
    <string name="service_protocol">微课用户服务条款</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="i_re_message">推荐消息</string>
    <string name="i_sys_message">系统消息</string>
    <string name="i_my_message">我的消息</string>
    <string name="message_detail_text">详情</string>
    <string name="junior_grade_one">初一</string>
    <string name="junior_grade_two">初二</string>
    <string name="junior_grade_end">中考</string>
    <string name="high_grade_one">高一</string>
    <string name="hige_grade_two">高二</string>
    <string name="high_grade_end">高考</string>
    <string name="little_grade_one">小一</string>
    <string name="little_grade_two">小二</string>
    <string name="little_grade_three">小三</string>
    <string name="little_grade_four">小四</string>
    <string name="little_grade_five">小五</string>
    <string name="little_grade_six">小六</string>
    <string name="i_setting_learn">设置学段</string>
    <string name="i_setting_sub">选择学科</string>
    <string name="i_select_version">选择版本</string>
    <string name="i_select_book">选择书本</string>
    <string name="i_setting_stu_sub">学段学科设置</string>
    <string name="text_save">保存</string>
    <string name="share_str">中学生贴身必备的学习助手，贴身的好老师，懂你的好朋友...</string>
    <string name="share_content">名师 课程，点此获取价值千元课程。</string>
    <string name="login_sina_text">新浪微博</string>
    <string name="login_tencent_text">腾讯QQ</string>
    <string name="login_weixin_text">微信</string>
    <string name="_regin_st">&#160;&#160;注册&#160;&#160;</string>
    <string name="_login_st">&#160;&#160;登录&#160;&#160;</string>
    <string name="i_selectLogin">你也可以选择第三方登录</string>
    <string name="login_by_vko_user">微课用户登录</string>
    <string name="login_by_phone_msg">手机快速登录</string>
    <string name="login_by_qq_user">QQ用户登录</string>
    <string name="login_by_weixin_user">微信用户登录</string>
    <string name="regist_text_new">以上都没有，我要注册！</string>
    <string name="i_setuplook">允许在2G/3G/4G网络下观看</string>
    <string name="i_setupdownload">允许在2G/3G/4G网络下下载</string>
    <string name="i_receiver_message">接收消息通知</string>
    <string name="i_about_vko">关于微课圈</string>
    <string name="i_clean_cache">清除缓存</string>
    <string name="i_exit_account">退出账号</string>
    <string name="i_new_version_hint">发现新版本...</string>
    <string name="i_cannot_watch">目前是非WIFI网络播放/下载，会产生手机流量，如有需要请去“设置”打开 </string>
    <string name="_time_info">用时</string>
    <string name="inputphone">请输入手机号码</string>
    <string name="verification">注册</string>
    <string name="inputverification">请输入验证码</string>
    <string name="seetingpass">请输入密码</string>
    <string name="select_grade">选择您的学段</string>
    <string name="select_location">所在城市：</string>
    <string name="select_school">绑定学校：</string>
    <string name="edit_seacher_hint">请输入地区  学校简称</string>
    <string name="next">下一步</string>
    <string name="save">保存</string>
    <string name="select_class">完善信息</string>
    <string name="select_subject">选择学科</string>
    <string name="my_download">我的下载</string>
    <string name="registe_down">注册完成</string>
    <string name="thousands_citsy">《中国千城入驻计划》</string>
    <string name="registe_get">恭喜您获得三个月畅听权限 </string>
    <string name="registe_experience">立即体验</string>
    <string name="registe_argree">点击注册代表你已阅读并同意《微课圈用户协议》</string>
    <string name="registe_argree1">《微课圈用户协议》</string>
    <string name="registe_argree_forget">点击下一步代表你已阅读并同意《微课圈用户协议》</string>
    <string name="registe_argree_new">温馨提示:未注册微课圈账号的手机号,登录时将自动注册,且代表您已同意《微课圈用户协议》</string>
    <string name="input_pwd">请输入密码</string>
    <string name="reg_error">验证码错误</string>
    <string name="input_mobile">请输入手机号</string>
    <string name="mpbile_lost">手机号码不存在</string>
    <string name="mobile_exsit">该用户已注册</string>
    <string name="userinfo_reg">用户注册</string>
    <string name="i_country">国家和地区</string>
    <string name="i_sure">确定</string>
    <string name="i_num">+86</string>
    <string name="i_cancel">取消</string>
    <string name="i_inputnum">输入验证码</string>
    <string name="i_input_pwd">输入旧密码</string>
    <string name="i_input_new_pwd">输入新密码</string>
    <string name="i_inputpwd_again">再次输入</string>
    <string name="i_inputadvice">请输入您的反馈意见：</string>
    <string name="version">V1.0</string>
    <string name="check_update">检查更新</string>
    <string name="about_vko">贴身的好老师，懂你的好朋友。中学生贴身必备的学习助手
微课圈，汇集精彩课程的学习社区，千万同学老师入驻，名师名课源源不断，班级小圈子互助成长，全国大社区互动分享，让疑难困窘再无遗憾</string>
    <string name="cancel_text">取消</string>
    <string name="_error_sub">纠错</string>
    <string name="_complete">完成</string>
</resources>