<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@color/bg_main_view"
    android:orientation="vertical" 
    android:fitsSystemWindows="true">

    <include 
        layout="@layout/layout_view_head"/>
    <cn.vko.ring.common.widget.ContainsEmojiEditText 
        android:layout_marginTop="10dp"
        android:id="@+id/ed_pwd_old"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:padding="10dp"
        android:background="@drawable/shape_loginbg"
        android:gravity="center_vertical"
        android:textColor="#6A6A6A"
        android:inputType="textPassword" 
        android:hint="@string/i_input_pwd"
        android:visibility="gone"/>
    <LinearLayout 
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:orientation="vertical">
    <cn.vko.ring.common.widget.ContainsEmojiEditText 
        android:id="@+id/ed_pwd_new"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:padding="10dp"
        android:textColor="#6A6A6A"
        android:gravity="center_vertical"
        android:background="@drawable/shape_loginbg"
        android:inputType="textPassword" 
        android:hint="@string/i_input_new_pwd"/>
    <cn.vko.ring.common.widget.ContainsEmojiEditText 
        android:id="@+id/ed_pwd_new_again"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/shape_loginbg"
        android:textColor="#6A6A6A"
        android:inputType="textPassword" 
        android:hint="@string/i_inputpwd_again"/>
    </LinearLayout>

    <Button 
        android:id="@+id/but_bind"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/i_sure"
        android:background="@drawable/selector_blue_button"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/white"
        />

</LinearLayout>
