<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/bg_main_view"
    android:orientation="vertical" >

    <include layout="@layout/layout_view_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/my_setting_logo"
            />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/version"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="10dp"
        android:editable="false"
        android:padding="10dp"
        android:textSize="16sp"
        android:text="@string/about_vko"
        android:textColor="#C7C7C7" />

    <Button
        android:id="@+id/but_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_button_background"
        android:padding="10dp"
        android:text="@string/check_update"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>